@@ -1,3 +1,8 @@
+2005-10-20  Frederic Ruaudel <grumz@grumz.net> 0.8
+
+	* libnautilus-actions/nautilus-actions-config.c: Fix a bug
+in the freeing of the NautilusActionsConfigAction object
+
 2005-10-19  Frederic Ruaudel <grumz@grumz.net> 0.8
 
 	* plugin/nautilus-actions-module.c: Add GPL licence header 
